[project]
name = "pem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
keywords = ["tool", "python"]
authors = [{name = "Arian Omrani"}]
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.41",
    "typer>=0.16.0",
    "uv>=0.8.2",
]

[dependency-groups]
dev = [
    "alembic>=1.16.4",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "sqlite-web>=0.6.4",
]

[project.scripts]
pem = "pem.cli:app"

[project.urls]
Homepage = "https://github.com/arian24b/pem"
Issues = "https://github.com/arian24b/pem/issues"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"] # Standard checks + isort

[tool.uv]
package = true
