[project]
name = "pemexe"
version = "1.6.0"
description = "🚀 Python Execution Manager - A powerful, modern tool for managing, scheduling, and executing Python scripts and projects with comprehensive logging, flexible scheduling, and dependency management. Perfect for DevOps, data science, and automation workflows."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["python", "scheduler", "automation", "devops", "task-runner", "cron", "execution", "management", "scripts", "projects", "cli", "background-jobs", "logging", "dependencies"]
authors = [{name = "Arian Omrani", email = "arian24b@gmail.com"}]
maintainers = [{name = "Arian Omrani", email = "arian24b@gmail.com"}]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "faker>=40.4.0",
    "greenlet>=3.3.1",
    "platformdirs>=4.7.1",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.46",
    "typer>=0.23.1",
]

[project.scripts]
pem = "pem.cli:run"

[project.urls]
Homepage = "https://github.com/arian24b/pem"
Repository = "https://github.com/arian24b/pem.git"
Issues = "https://github.com/arian24b/pem/issues"
Changelog = "https://github.com/arian24b/pem/blob/main/CHANGELOG.md"
Documentation = "https://github.com/arian24b/pem#readme"

[tool.ruff]
line-length = 120
indent-width = 4
respect-gitignore = true
fix = true
show-fixes = true

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "S",      # bandit
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T20",    # flake8-print
    "SIM",    # flake8-simplify
    "LOG",    # flake8-logging
    "RUF",    # Ruff-specific rules
]
ignore = [
    "S101",   # Use of assert detected (needed for tests)
    "T20",    # print statements (CLI tool)
    "A003",   # Class attribute shadows builtin
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pem"]
